1.2.23pre1
	- fix crash when hiding the taskbar and "collapse" button is hidden
	- fix repeated drag over taskbar icon not working
	- fix problems with Unmap events being handled incorrectly

1.2.22: 2005-07-17
	- AutoShowDelay setting (opposite of AutoHideDelay)
	- use Workspace status window instead of showing the taskbar
	  when workspace changes if taskbar autohide is enabled

1.2.22pre3: 2005-07-15
	- fix focusing after window minimized or hidden

1.2.22pre2: 2005-07-10
	- Remember last focused window per-workspace
	- Enable the LockCommand functionality only if command 
          found (Eduard Bloch)
	- new Korean translation (Ken Yeo)

1.2.22pre1: 2005-06-28
	- Latvian translation (Kristaps Kaupe)
	- Double click activates workspace in window list
	- Fixes to taskbar layout when only tasks visible
	- Made network status applets show/hide dynamically again
	- Add image to taskbar collapse button
        - Fix MinimizeToDesktop windows getting out of desktop area
	- Added key binding: KeySysCollapseTaskBar
	- Fixed UTF-8 input support in AddressBar

1.2.21: 2005-05-31

1.2.21pre2: 2005-05-16
	- translation: Vietnamese (Phan Vinh Thinh)
	- translation: Indonesian (Arif E. Nugroho)
	- translation update: Simplified Chinese (Hiweed Leng)
	- translation update: French (Frederic Bothamy)
	- APM applet support for NetBSD (Iain Hibbert (plunky))
	- add new winoption: noFocusOnMap
	- fix ClientWindowMouseActions for Window-Drag combination

1.2.21pre1: 2005-03-20
	- improve selection of "urgent" windows with alt+tab
	- fix possible crash (Grant McDorman)
	- fix 64bit usage of Xft (Marcus Meissner)
	- cleanup warning on still-open file descriptors
        - disabled some Ctrl+Alt+Del commands by default since
          they need some configuring to work on all systems
        - fix desktop layer setting for nautilus

1.2.20: 2005-01-09
	- fix+revert default binding for MouseWinMove an MouseWinSize
	- fix 1 pixel border when taskbar at top of screen