@@ -2,6 +2,9 @@
 	- fix crash when hiding the taskbar and "collapse" button is hidden
 	- fix repeated drag over taskbar icon not working
 	- fix problems with Unmap events being handled incorrectly
+	- customizable placement order options for minimized window icons
+          (MiniIconsPlaceHorizontal, MiniIconsRightToLeft, 
+          MiniIconsBottomToTop) - (Konstantin Korikov - lostclus)
 
 1.2.22: 2005-07-17
 	- AutoShowDelay setting (opposite of AutoHideDelay)
